# vectorpaper

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  later.md  pyproject.toml
app/: analyze.py  chat.py  chunks.py  config.py  db.py  ideate.py  ingest.py  llm.py  main.py  models.py  parse.py  rerank.py  storage.py  summarize.py  vectors.py  worker.py
eval/: eval_retrieval.py  golden.json
tests/: test_pipeline.py
ui/: README.md  pubspec.yaml
ui/lib/: api.dart  common.dart  detail_page.dart  library_page.dart  main.dart  search_page.dart  settings_page.dart
ui/linux/: CMakeLists.txt
ui/linux/runner/: my_application.cc
ui/test/: widget_test.dart
ui/web/: index.html  manifest.json
